# pulumi-rs-kube-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prebuilt  Dockerfile.release  LICENSE  Makefile  README.md  SECURITY.md  build.rs  deny.toml
.github/workflows/: ci.yaml  docker.yaml  release.yaml  security.yaml
deploy/crds/: auto.pulumi.com_updates.yaml  auto.pulumi.com_workspaces.yaml  pulumi.com_programs.yaml  pulumi.com_stacks.yaml
deploy/flux/: helmrelease.yaml
deploy/helm/pulumi-operator/: .helmignore  Chart.yaml  values.yaml
deploy/helm/pulumi-operator/crds/: auto.pulumi.com_updates.yaml  auto.pulumi.com_workspaces.yaml  pulumi.com_programs.yaml  pulumi.com_stacks.yaml
deploy/helm/pulumi-operator/templates/: _helpers.tpl  aggregation_roles.yaml  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  networkpolicy.yaml  service.yaml  service_account.yaml  servicemonitor.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: go_duration.rs  hmac_validation.rs  lock_detection.rs  program_deser.rs  redact_stderr.rs  stack_deser.rs  update_deser.rs  workspace_deser.rs
src/: crdgen.rs  errors.rs  lib.rs  main.rs
src/agent/: auth.rs  cancel.rs  init.rs  mod.rs  redact.rs  server.rs
src/api/: conditions.rs  mod.rs  owner.rs  program.rs  schema.rs  stack.rs  update.rs  workspace.rs
src/core/: finalizer.rs  lending.rs  lock.rs  mod.rs  recovery.rs  time.rs
src/operator/: connection.rs  events.rs  finalizers.rs  flux.rs  health.rs  lock.rs  manager.rs  metrics.rs  mod.rs  shutdown.rs  status.rs
src/operator/actors/: actor.rs  dispatcher.rs  messages.rs  mod.rs
src/operator/controllers/: mod.rs  program.rs  update.rs  workspace.rs
src/operator/reconcile/: mod.rs  pipeline.rs  prerequisites.rs  project.rs  source.rs  sync.rs
src/operator/webhook/: mod.rs
src/proto/: agent.proto
tests/: unit_tests.rs
tests/e2e/: run-flux-chaos.sh  run-flux-concurrent.sh  run-flux-mixed.sh  run-flux.sh  run.sh
tests/property/: mod.rs
tests/unit/: errors_test.rs  events_test.rs  finalizers_test.rs  flux_test.rs  input_boundaries_test.rs  lock_test.rs  manager_test.rs  metrics_test.rs  notification_test.rs  pipeline_test.rs  recovery_test.rs  redaction_test.rs  shutdown_test.rs  source_test.rs  status_test.rs  sync_test.rs  webhook_test.rs
